--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-share": "^4.4.1",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
+    "styled-components": "^6.1.19",
     "typescript": "^5"
   },
   "devDependencies": {
