--- a/package.json
+++ b/package.json
@@ -24,13 +24,18 @@
     "react": "^18",
     "react-dom": "^18",
     "react-helmet": "^6.1.0",
+    "react-markdown": "^10.1.0",
     "react-share": "^4.4.1",
+    "rehype-highlight": "^7.0.2",
+    "rehype-raw": "^7.0.0",
     "remark": "^15.0.1",
+    "remark-gfm": "^4.0.1",
     "remark-html": "^16.0.1",
     "styled-components": "^6.1.19",
     "typescript": "^5"
   },
   "devDependencies": {
+    "@types/prismjs": "^1.26.5",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "prettier": "^3.2.5",
