--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gray-matter": "^4.0.3",
     "lodash": "^4.17.21",
     "next": "14.2.5",
+    "prismjs": "^1.30.0",
     "react": "^18",
     "react-dom": "^18",
     "react-helmet": "^6.1.0",
