--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "David Adeola's Blog - Next.js Version",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -13,17 +13,20 @@
   "dependencies": {
     "@types/lodash": "^4.14.202",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "19.1.13",
+    "@types/react-dom": "19.1.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
     "eslint": "^8",
-    "eslint-config-next": "14.2.5",
+    "eslint-config-next": "15.5.3",
     "gray-matter": "^4.0.3",
     "lodash": "^4.17.21",
-    "next": "14.2.5",
+    "lucide-react": "^0.544.0",
+    "next": "15.5.3",
     "prismjs": "^1.30.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "react-helmet": "^6.1.0",
     "react-markdown": "^10.1.0",
     "react-share": "^4.4.1",
@@ -33,6 +36,7 @@
     "remark-gfm": "^4.0.1",
     "remark-html": "^16.0.1",
     "styled-components": "^6.1.19",
+    "tailwind-merge": "^3.3.1",
     "typescript": "^5"
   },
   "devDependencies": {
@@ -41,5 +45,9 @@
     "postcss": "^8.5.6",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.17"
+  },
+  "overrides": {
+    "@types/react": "19.1.13",
+    "@types/react-dom": "19.1.9"
   }
 }
