--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
     "typescript": "^5"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.13",
     "@types/prismjs": "^1.26.5",
-    "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "prettier": "^3.2.5",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^4.1.13"
   },
   "overrides": {
     "@types/react": "19.1.13",
