--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "@types/prismjs": "^1.26.5",
     "postcss": "^8.5.6",
     "prettier": "^3.2.5",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^4.1.13",
+    "tw-animate-css": "^1.3.8"
   },
   "overrides": {
     "@types/react": "19.1.13",
