--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\""
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@supabase/supabase-js": "^2.57.4",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20",
     "@types/react": "19.1.13",
@@ -29,15 +33,18 @@
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.63.0",
     "react-markdown": "^10.1.0",
     "rehype-highlight": "^7.0.2",
     "rehype-raw": "^7.0.0",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.1",
     "remark-html": "^16.0.1",
+    "sonner": "^2.0.7",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.13",
